// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render summary for 1 expense 1`] = `
<div>
  <h2>
    Viewing 1 expense totalling $3.56
  </h2>
</div>
`;

exports[`Should correctly render summary for multiple expenses 1`] = `
<div>
  <h2>
    Viewing 5 expenses totalling $486,550.72
  </h2>
</div>
`;
